--- a/src/assets/styles/base/_settings.scss
+++ b/src/assets/styles/base/_settings.scss
@@ -1,9 +1,14 @@
 // Colors
+
 $white: #FFFFFF;
 $black: #000000;
 
 // Spacing
+
+$xs-size: 0.8rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
-$xl-size: 4.8rem;
+$xl-size: 6.4rem;
+$xxl-size: 12.8rem;
+$desktop-breakpoint: 45rem;
