Update Sass files

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -1,5 +1,5 @@
 // ===========================================================================
-// Global styles
+// Base styles
 // ===========================================================================
 
 html {
