--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -9,11 +9,10 @@
 @import 
   './abstracts/functions',
   './abstracts/mixins',
-  './abstracts/placeholders',
   './abstracts/variables';
 
 @import 
-  './base/global',
+  './base/base',
   './base/reset',
   './base/typography';
 
