Update project structure

--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -1,7 +1,9 @@
 // ===========================================================================
-// Image styles
+// Typography styles
 // ===========================================================================
 
-.img-logo {
-  padding: 0 0 map-get($spaces, 'lg') 0;
+body {
+  color: map-get($colors, 'basic', 'black');
+  font-family: $font-family-sans-serif;
+  font-size: map-get($font-sizes, 'md');
 }
