--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -5,37 +5,39 @@
 // Breakpoints
 
 $breakpoints: (
-  'xs': 0,        // X-Small devices (portrait phones)
-  'sm': 576px,    // Small devices (landscape phones)
-  'md': 768px,    // Medium devices (tablets)
-  'lg': 992px,    // Large devices (desktops)
-  'xl': 1200px,   // X-Large devices (large desktops)
-  'xxl': 1400px   // XX-Large devices (larger desktops)
+  'xs': 0,         // X-Small devices (portrait phones)
+  'sm': 576px,     // Small devices (landscape phones)
+  'md': 768px,     // Medium devices (tablets)
+  'lg': 992px,     // Large devices (desktops)
+  'xl': 1200px,    // X-Large devices (large desktops)
+  'xxl': 1400px    // XX-Large devices (larger desktops)
 );
 
 // Colors
 
 $colors: (
   'basic': (
-    'black': hsl(0, 0%, 0%),
-    'white': hsl(0, 0%, 100%)
+    'black': hsl(0, 0%, 0%),   // RGB: #000000
+    'gray': hsl(0, 0%, 33%),   // RGB: #545454
+    'white': hsl(0, 0%, 100%)  // RGB: #FFFFFF
   ),
   'javascript': (
-    'dark-charcoal': hsl(80, 3%, 19.4%),
-    'minion-yellow': hsl(52, 84.3%, 62.5%)
+    'gray-dark': hsl(60, 2.2%, 17.6%),  // RGB: #2E2E2C
+    'yellow': hsl(52.9, 87.6%, 62%)     // RGB: #F3DF49
   )
 );
 
 // Spacing
 
 $spaces: (
-  'xxs': 0.4rem,  // 4px
-  'xs': 0.8rem,   // 8px
-  'sm': 1.2rem,   // 12px
-  'md': 1.6rem,   // 16px
-  'lg': 3.2rem,   // 32px
-  'xl': 6.4rem,   // 64px
-  'xxl': 12.8rem  // 128px
+  'xxs': 0.4rem,   // 4px
+  'xs': 0.8rem,    // 8px
+  'sm': 1.2rem,    // 12px
+  'md': 1.6rem,    // 16px
+  'lg': 3.2rem,    // 32px
+  'xl': 4.8rem,    // 48px
+  'xxl': 6.4rem,   // 64px
+  'xxxl': 12.8rem  // 128px
 );
 
 // Typography
@@ -45,10 +47,11 @@ $font-family-sans-serif: 'Arial', 'Calibri', 'Helvetica', 'Verdana', sans-serif;
 $font-family-monospace: 'Consolas', 'Courier', 'Monaco', monospace;
 
 $font-sizes: (
-  'xs': 0.8rem,   // 8px  | 6pt
-  'sm': 1.2rem,   // 12px | 9pt
-  'md': 1.6rem,   // 16px | 12pt
-  'lg': 2.4rem,   // 24px | 18pt
-  'xl': 3.2rem,   // 32px | 24pt
-  'xxl': 6.4rem   // 64px | 48pt
+  'xs': 0.8rem,    // 8px  | 6pt
+  'sm': 1.2rem,    // 12px | 9pt
+  'md': 1.6rem,    // 16px | 12pt
+  'lg': 2.4rem,    // 24px | 18pt
+  'xl': 3.2rem,    // 32px | 24pt
+  'xxl': 4.8rem,   // 48px | 36pt
+  'xxxl': 6.4rem   // 64px | 48pt
 );
