Update _animations.scss file

--- a/src/assets/sass/base/_animations.scss
+++ b/src/assets/sass/base/_animations.scss
@@ -1,5 +1,5 @@
 // ===========================================================================
-// Animations styles
+// Animations
 // ===========================================================================
 
 .bounce {
