Update README.md and .scss files

--- a/src/assets/sass/base/_animations.scss
+++ b/src/assets/sass/base/_animations.scss
@@ -2,8 +2,10 @@
 // Animations
 // ===========================================================================
 
+// Bounce animation
+
 .bounce {
-  animation-duration: 2.5s;
+  animation-duration: 2500ms;
   animation-iteration-count: infinite;
   animation-name: bounce;
   animation-timing-function: linear;
@@ -18,5 +20,23 @@
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+// Spin animation
+
+.spin {
+  animation-duration: 15000ms;
+  animation-iteration-count: infinite;
+  animation-name: spin;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
