--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -17,9 +17,9 @@ $breakpoints: (
 
 $colors: (
   'basic': (
-    'black': hsl(0, 0%, 0%),   // RGB: #000000
-    'gray': hsl(0, 0%, 33%),   // RGB: #545454
-    'white': hsl(0, 0%, 100%)  // RGB: #FFFFFF
+    'black': hsl(0, 0%, 0%),        // RGB: #000000
+    'gray-light': hsl(0, 0%, 33%),  // RGB: #545454
+    'white': hsl(0, 0%, 100%)       // RGB: #FFFFFF
   ),
   'javascript': (
     'gray-dark': hsl(60, 2.2%, 17.6%),  // RGB: #2E2E2C
