--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -2,6 +2,12 @@
 // Home page styles
 // ===========================================================================
 
+.home {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .home-container {
   align-items: center;
   display: flex;
