--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -27,12 +27,10 @@
   color: map-get($colors, 'basic', 'white');
   font-size: map-get($font-sizes, 'xxl');
   font-weight: normal;
-  padding: map-get($spaces, 'lg') 0 0 0;
+  padding: map-get($spaces, 'lg') 0 map-get($spaces, 'xl');
 }
 
 .home-badges {
-  padding: map-get($spaces, 'xl') 0 0 0;
-
   a {
     text-decoration: none;
   }
