--- a/src/assets/sass/layout/_flexbox.scss
+++ b/src/assets/sass/layout/_flexbox.scss
@@ -1,3 +1,9 @@
 // ================================================================================================
-// Header styles
+// Flexbox styles
 // ================================================================================================
+
+.flexbox-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
