--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,6 +1,6 @@
-// ===========================================================================
+// ================================================================================================
 // Imports
-// ===========================================================================
+// ================================================================================================
 
 // Abstracts -> Vendors -> Base -> Layout -> Components -> Pages -> Themes
 
@@ -19,6 +19,7 @@
   './base/typography';
 
 @import 
+  './layout/flexbox',
   './layout/footer',
   './layout/header';
 
