--- a/src/assets/sass/abstracts/_mixins.scss
+++ b/src/assets/sass/abstracts/_mixins.scss
@@ -10,3 +10,15 @@
   -ms-border-radius: $radius;
   -webkit-border-radius: $radius;
 }
+
+// User select
+
+@mixin user-select($value) {
+  -webkit-touch-callout: $value;
+  -webkit-user-select: $value;
+  -khtml-user-select: $value;
+  -moz-user-select: $value;
+  -ms-user-select: $value;
+  -o-user-select: $value;
+  user-select: $value;
+}
