Update _mixins.scss file

--- a/src/assets/sass/abstracts/_mixins.scss
+++ b/src/assets/sass/abstracts/_mixins.scss
@@ -2,13 +2,13 @@
 // Mixins
 // ================================================================================================
 
-// Rounded corners
+// Border radius
 
 @mixin border-radius($radius) {
-  border-radius: $radius;
+  -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   -ms-border-radius: $radius;
-  -webkit-border-radius: $radius;
+  border-radius: $radius;
 }
 
 // User select
