--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -17,15 +17,15 @@ $breakpoints: (
 
 $colors: (
   'app': (
-    'gray-light': hsl(0, 0%, 33%),      // RGB: #545454
+    'gray-light': hsl(0, 0%, 33%),      // HEX: #545454
   ),
   'basic': (
-    'black': hsl(0, 0%, 0%),            // RGB: #000000
-    'white': hsl(0, 0%, 100%)           // RGB: #FFFFFF
+    'black': hsl(0, 0%, 0%),            // HEX: #000000
+    'white': hsl(0, 0%, 100%)           // HEX: #FFFFFF
   ),
   'javascript': (
-    'gray-dark': hsl(60, 2.2%, 17.6%),  // RGB: #2E2E2C
-    'yellow': hsl(52.9, 87.6%, 62%)     // RGB: #F3DF49
+    'gray-dark': hsl(60, 2.2%, 17.6%),  // HEX: #2E2E2C
+    'yellow': hsl(52.9, 87.6%, 62%)     // HEX: #F3DF49
   )
 );
 
