--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -28,9 +28,9 @@ $colors: (
     'yellow-light': hsl(52.9, 87.6%, 62%)  // HEX: #F3DF49
   ),
   'shadow': (
-    'black-25': hsla(0, 0%, 0%, 0.25),      // RGB: #000000
-    'black-50': hsla(0, 0%, 0%, 0.5),       // RGB: #000000
-    'black-75': hsla(0, 0%, 0%, 0.75)       // RGB: #000000
+    'black-25': hsla(0, 0%, 0%, 0.25),     // HEX: #000000
+    'black-50': hsla(0, 0%, 0%, 0.5),      // HEX: #000000
+    'black-75': hsla(0, 0%, 0%, 0.75)      // HEX: #000000
   )
 );
 
