Update views.js and _home.scss files - fix badges

--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -30,7 +30,8 @@
   }
 
   img {
-    padding: 0.2rem;
+    display: block;
+    padding: 0.2rem map-get($spaces, 'xxs');
     @include drop-shadow(3px, 3px, 3px, map-get($colors, 'shadow', 'black-50'));
   }
 }
