Update .scss files

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -14,5 +14,5 @@ html {
 }
 
 body {
-  background: map-get($colors, 'javascript', 'gray-dark');
+  background: map-get($colors, 'javascript', 'gray');
 }
