--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 // ================================================================================================
-// Footer styles
+// Footer
 // ================================================================================================
 
 .footer {
@@ -15,23 +15,17 @@
   }
 }
 
-// Landscape phones
-
 @media (min-width: map-get($breakpoints, 'sm')) {
   .footer {
     @include drop-shadow(0, 0, 0.6rem, map-get($colors, 'shadow', 'black-50'));
   }
 }
 
-// Tablets
-
 @media (min-width: map-get($breakpoints, 'md')) {
   .footer {
     @include drop-shadow(0, 0, 0.8rem, map-get($colors, 'shadow', 'black-50'));
   }
 }
-
-// Desktops
 
 @media (min-width: map-get($breakpoints, 'lg')) {
   .footer {
