--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 // ================================================================================================
-// Header styles
+// Header
 // ================================================================================================
 
 .header {
@@ -7,23 +7,17 @@
   @include drop-shadow(0.4rem, 0.4rem, 0.4rem, map-get($colors, 'shadow', 'black-50'));
 }
 
-// Landscape phones
-
 @media (min-width: map-get($breakpoints, 'sm')) {
   .header {
     @include drop-shadow(0.6rem, 0.6rem, 0.6rem, map-get($colors, 'shadow', 'black-50'));
   }
 }
 
-// Tablets
-
 @media (min-width: map-get($breakpoints, 'md')) {
   .header {
     @include drop-shadow(0.8rem, 0.8rem, 0.8rem, map-get($colors, 'shadow', 'black-50'));
   }
 }
-
-// Desktops
 
 @media (min-width: map-get($breakpoints, 'lg')) {
   .header {
