--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 // ================================================================================================
-// Home styles
+// Home
 // ================================================================================================
 
 .home {
@@ -44,8 +44,6 @@
   }
 }
 
-// Landscape phones
-
 @media (min-width: map-get($breakpoints, 'sm')) {
   .home__app-logo {
     height: 156px;
@@ -59,8 +57,6 @@
   }
 }
 
-// Tablets
-
 @media (min-width: map-get($breakpoints, 'md')) {
   .home__app-logo {
     height: 196px;
@@ -73,8 +69,6 @@
     @include drop-shadow(0.5rem, 0.5rem, 0.5rem, map-get($colors, 'shadow', 'black-50'));
   }
 }
-
-// Desktops
 
 @media (min-width: map-get($breakpoints, 'lg')) {
   .home__app-logo {
